@@ -1,6 +1,8 @@
 AUX ruby-1.8.6-memory-leak.diff 1351 RMD160 cba1335fcd52df26b4b2884dea14e0c74852b67a SHA1 184c1743592684abfc1cce8ffa38ae749fe0a1b1 SHA256 90dbc7b444ed936ed8a1fadb443240ec494a6c748d38ff089af423e50bdd9528
 AUX ruby-1.8.6-revert-r15856.patch 3389 RMD160 06cb82094586a1d893b1da5245063bd6f4beb9e1 SHA1 74fa9b4c2485c953ad791516806a75ba70ce5368 SHA256 16394b4e748996ef92419909f49fc59aa5938f76691eb5d7188b056d2b725efc
 DIST ruby-1.9.0-2.tar.bz2 5282728 RMD160 abf70f5380f91f25130edde884deac6035afae60 SHA1 e7253d4b091925c661fe7f57389ab59d8a3e99ff SHA256 913d2bfd03e4285f61e3d343925ab8286ebfc5f7f4a7c861de7a160219cd1351
+DIST ruby-1.9.0-4.tar.bz2 5546544 RMD160 16021e0ac7c148cd6eea3c4e9665f52301ae7ad0 SHA1 066b35fa0e860c5392a1382b065fbba582d9de46 SHA256 09a91a60fba308a45ab8d3e691ec5ab279b36b646e75ad68d1d45679bdc4cbce
 EBUILD ruby-1.9.0.2.ebuild 4605 RMD160 de4201fab2da67c530f418c1e267aeb27524eecf SHA1 66b433e5cc1293157e31d1e2613c1917cfadb906 SHA256 07ad3bb93eef130777d722b683fdb1c4e190df8f09c29f7b419e13238bd21aa2
-MISC ChangeLog 50239 RMD160 000a2ef530e4291610b451e03d2d2b18feb44efd SHA1 498b79d9d4ac94a33616a2022003f4ea2fb73104 SHA256 35ef69049a41e7aebd3151af8332042b8c84d58ea7696302299337d5a23beef0
+EBUILD ruby-1.9.0.4.ebuild 4584 RMD160 0d424c6d39c8b9ecf926e928375bffb000d47b90 SHA1 84c1f732733515418d29124a338314b7acffc4e8 SHA256 c2548df0e252fdb9994f19ab9225b46ea234d02b4e15d13404055e59b1237e97
+MISC ChangeLog 50359 RMD160 c4b03e818e47120afce82d6ab58cbbd3c462b761 SHA1 7ae9d4ce8503124b0ccc56f4c3040d6e90b5e038 SHA256 aba110e51893b85c49e0e1408b18d49abb7a40d5a67fb90dbe750ab93b732054
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
